Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-38343

Qt5.3 offline VC2013 angle 32bit installer: qmake not found error during installation

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • Not Evaluated
    • None
    • 5.3.0 RC1
    • Packaging & Installer
    • Windows

    Description

      Download the latest opensource offline installer for VC2013 angle 32bit (qt-opensource-windows-x86-msvc2013-5.3.0-RC_2014-04-15_00-54-08-58.run).
      Launch the installer and install the default components.
      Bug:

      Operation 'ConsumeOutput' with arguments: 'qt.53.win32_msvc2013_qmakeoutput; I:\qtinstall\Qt5.3.0_vc2013angle_b58/5.3/msvc2013/bin/qmake.exe; -query'
       failed: File 'I:\qtinstall\Qt5.3.0_vc2013angle_b58\5.3\msvc2013\bin\qmake.exe.exe' does not exist or is not an executable binary.
      created warning message box installationErrorWithRetry: 'Installer Error', Error during installation process (qt.53.win32_msvc2013):
      File 'I:\qtinstall\Qt5.3.0_vc2013angle_b58\5.3\msvc2013\bin\qmake.exe.exe' does not exist or is not an executable binary.
      

      Attachments

        For Gerrit Dashboard: QTBUG-38343
        # Subject Branch Project Status CR V

        Activity

          People

            kkohne Kai Köhne
            tarjasundqvist Tarja Sundqvist
            Votes:
            1 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes