Improve error message for ConsumeOutputOperation

Avoid a warning that e.g. 'qmake.exe.exe' does not exist, when the
argument was qmake.exe.

Task-number: QTBUG-38343
Change-Id: Icdfc8ffc8e112b23fb0e789d6041ea7eefaf55c3
Reviewed-by: Karsten Heimrich <karsten.heimrich@digia.com>